feat: add elasticsearch markdown doc